--- a/app/src/main/res/layout/activity_bookingservice.xml
+++ b/app/src/main/res/layout/activity_bookingservice.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="20sp"
-            android:text="Masukkan alamat lengkap bengkell"
+            android:hint="Masukkan alamat lengkap bengkell"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="18dp" />
 
