--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -19,7 +19,7 @@
         <TextView
             android:text="OMecMart"
             android:paddingLeft="60dp"
-            android:textSize="50sp"
+            android:textSize="40sp"
             android:textColor="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,7 +101,8 @@
             android:hint="+62"
             android:textColorHint="@android:color/black"
             android:ems="10"
-            android:id="@+id/editText13" />
+            android:id="@+id/editText13"
+            />
 
         <EditText
             android:layout_width="wrap_content"
