--- a/app/src/main/res/layout/activity_bookingservice.xml
+++ b/app/src/main/res/layout/activity_bookingservice.xml
@@ -21,12 +21,44 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/imageButtonLokasi"
             android:layout_width="wrap_content"
             android:layout_height="38dp"
             android:background="#fefefe"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/lokasi" />
+            app:srcCompat="@drawable/lokasi3"
+            />
+
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20sp"
+            android:hint="Masukkan alamat lengkap user"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="18dp" />
+
+    </LinearLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#eff0f2"
+        ></GridLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="#fefefe"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="31dp"
+            android:background="#fefefe"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/tlp"
+            android:layout_weight="0.35" />
 
 
         <TextView
@@ -34,9 +66,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="20sp"
-            android:hint="Masukkan alamat lengkap bengkell"
+            android:hint="Masukkan nomor telepon user"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="18dp" />
+
 
     </LinearLayout>
 
@@ -54,42 +87,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fefefe"
-        android:layout_weight="0.27">
+        android:layout_weight="0.07">
 
-
-        <LinearLayout
-            android:layout_gravity="center"
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="118dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120sp"
             android:background="#187bb6"
-            android:layout_width="294dp"
-            android:layout_height="74dp"
-            android:weightSum="1"
-            android:layout_marginLeft="30sp"
-            >
-
-
-            <ImageButton
-                android:layout_width="45dp"
-                android:layout_height="43dp"
-                app:srcCompat="@drawable/lokasi2"
-                android:id="@+id/imageButton3"
-                android:scaleType="fitCenter"
-                android:background="#187bb6"
-                android:layout_margin="10sp"
-                />
-
-            <TextView
-                android:text="Atau cari lokasi bengkel menggunakan GPS /maps"
-                android:textSize="17sp"
-                android:textColor="#fefefe"
-                android:paddingLeft="30sp"
-                android:paddingTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView4"
-                />
-
-        </LinearLayout>
-
+            android:text="Pilih Bengkel"
+            android:textColor="#fefefe"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
     <LinearLayout
@@ -123,7 +131,7 @@
         android:weightSum="1">
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/button6"
             android:layout_width="118dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10sp"
