--- a/app/src/main/res/layout/activity_service_rutin.xml
+++ b/app/src/main/res/layout/activity_service_rutin.xml
@@ -43,7 +43,7 @@
                 android:layout_marginTop="20sp"
                 android:textColor="#fefefe"
                 android:background="#187bb6"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="34dp"
                 android:id="@+id/button2" />
 
@@ -87,7 +87,7 @@
                 android:layout_marginTop="20sp"
                 android:textColor="#fefefe"
                 android:background="#187bb6"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="34dp"
                 android:id="@+id/button7" />
 
