--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lenovo.omecmart.MainActivity">
-
-
+    tools:context="com.example.lenovo.omecmart.home">
 
 </android.support.constraint.ConstraintLayout>
