--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_daftar1"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_daftar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,22 +10,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.lenovo.omecmart.Daftar1">
-
+    tools:context="com.example.lenovo.omecmart.Daftar">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="70dp">
 
         <TextView
             android:text="OMecMart"
-            android:paddingLeft="90dp"
-            android:textSize="40sp"
+            android:paddingLeft="60dp"
+            android:textSize="50sp"
             android:textColor="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:fontFamily="arial" />
+            android:id="@+id/textView2" />
     </LinearLayout>
 
     <LinearLayout
@@ -115,30 +113,6 @@
 
 
     </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#eff0f2">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:paddingLeft="10dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/lokasi3"
-            android:id="@+id/imageLokasi1" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPersonName"
-            android:hint="Alamat User"
-            android:textColorHint="@android:color/black"
-            android:paddingLeft="10dp"
-            android:ems="10"
-            android:id="@+id/editText20" />
-    </LinearLayout>
-
 
     <LinearLayout
         android:orientation="horizontal"
@@ -159,14 +133,14 @@
             android:layout_height="match_parent"
             android:inputType="textPassword"
             android:ems="10"
-            android:hint=" Kata Sandi"
+            android:hint="Kata Sandi"
             android:textColorHint="@android:color/black"
             android:id="@+id/editText15"
             android:layout_weight="0.94" />
 
         <ImageButton
-            android:layout_width="28dp"
-            android:layout_height="37dp"
+            android:layout_width="33dp"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/sandi"
             android:id="@+id/imageButton3"
             android:background="#eff0f2"
@@ -190,19 +164,17 @@
         <Button
             android:text="Daftar"
             android:textColor="@android:color/white"
-            android:layout_width="323dp"
+            android:layout_width="match_parent"
             android:background="#187bb6"
             android:layout_height="37dp"
-            android:id="@+id/button3"
-            android:layout_gravity="center"/>
+            android:id="@+id/button3" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:paddingTop="10dp"
         android:background="#eff0f2"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="40dp">
 
         <TextView
             android:text="Dengan mendaftar, Saya setuju dengan ketentuan layanan dan kebijakan privasi"
@@ -219,7 +191,6 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:layout_marginTop="10sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
@@ -229,7 +200,6 @@
             android:id="@+id/editText18" />
 
         <Button
-            android:layout_marginTop="10sp"
             android:text="Masuk"
             android:textSize="17sp"
             android:textColor="#187bb6"
@@ -241,4 +211,8 @@
 
 
     </LinearLayout>
+
+
+
 </LinearLayout>
+
