--- a/app/src/main/res/layout/activity_daftar1.xml
+++ b/app/src/main/res/layout/activity_daftar1.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,20 +15,29 @@
     android:orientation="vertical"
     tools:context="com.example.lenovo.omecmart.Daftar1">
 
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
         <TextView
-            android:text="OMecMart"
-            android:paddingLeft="90dp"
-            android:textSize="40sp"
-            android:textColor="@android:color/black"
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:fontFamily="arial" />
+            android:layout_gravity="center"
+            android:fontFamily="arial"
+            android:text="OMecMart"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="40sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -51,7 +63,7 @@
             android:hint="Email (nama@gmail.com)"
             android:textColorHint="@android:color/black"
             android:ems="10"
-            android:id="@+id/editText10"
+            android:id="@+id/editTextEmail"
             android:layout_weight="0.03" />
 
     </LinearLayout>
@@ -77,7 +89,7 @@
             android:textColorHint="@android:color/black"
             android:paddingLeft="10dp"
             android:ems="10"
-            android:id="@+id/editText12" />
+            android:id="@+id/editTextNama" />
     </LinearLayout>
 
     <LinearLayout
@@ -110,7 +122,7 @@
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:ems="10"
-            android:id="@+id/editText14"
+            android:id="@+id/editTextNomor"
             android:layout_weight="1" />
 
 
@@ -125,7 +137,7 @@
             android:layout_width="30dp"
             android:paddingLeft="10dp"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/lokasi3"
+            app:srcCompat="@drawable/lokasi"
             android:id="@+id/imageLokasi1" />
 
         <EditText
@@ -136,7 +148,7 @@
             android:textColorHint="@android:color/black"
             android:paddingLeft="10dp"
             android:ems="10"
-            android:id="@+id/editText20" />
+            android:id="@+id/editTextAlamat" />
     </LinearLayout>
 
 
@@ -161,16 +173,8 @@
             android:ems="10"
             android:hint=" Kata Sandi"
             android:textColorHint="@android:color/black"
-            android:id="@+id/editText15"
+            android:id="@+id/editTextPassword"
             android:layout_weight="0.94" />
-
-        <ImageButton
-            android:layout_width="28dp"
-            android:layout_height="37dp"
-            app:srcCompat="@drawable/sandi"
-            android:id="@+id/imageButton3"
-            android:background="#eff0f2"
-            android:scaleType="fitCenter" />
 
     </LinearLayout>
 
@@ -193,7 +197,7 @@
             android:layout_width="323dp"
             android:background="#187bb6"
             android:layout_height="37dp"
-            android:id="@+id/button3"
+            android:id="@+id/buttonRegister"
             android:layout_gravity="center"/>
     </LinearLayout>
 
@@ -202,7 +206,8 @@
         android:paddingTop="10dp"
         android:background="#eff0f2"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        android:weightSum="1">
 
         <TextView
             android:text="Dengan mendaftar, Saya setuju dengan ketentuan layanan dan kebijakan privasi"
@@ -210,7 +215,8 @@
             android:layout_width="match_parent"
             android:textColor="@android:color/black"
             android:layout_height="match_parent"
-            android:id="@+id/textView4" />
+            android:id="@+id/textView4"
+            android:layout_weight="1.95" />
     </LinearLayout>
 
     <LinearLayout
@@ -218,27 +224,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
-            android:layout_marginTop="10sp"
+        <TextView
+            android:id="@+id/textViewLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Sudah punya akun?"
-            android:paddingLeft="50dp"
-            android:ems="10"
-            android:id="@+id/editText18" />
+            android:layout_weight="0.09"
+            android:background="#FFFFFF"
+            android:textAlignment="center"
+            android:text=" Sudah Punya Akun?"
+            android:textColor="#000"
+            android:textSize="18sp" />
 
         <Button
-            android:layout_marginTop="10sp"
-            android:text="Masuk"
-            android:textSize="17sp"
-            android:textColor="#187bb6"
-            android:background="#fefefe"
+            android:id="@+id/buttonLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_weight="1" />
+            android:layout_weight="0.05"
+            android:background="#fefefe"
+            android:text="Masuk"
+            android:paddingRight="50dp"
+            android:textColor="#187bb6"
+            android:textSize="17sp" />
+
 
 
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
