--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,183 +15,153 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.lenovo.omecmart.home">
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#eff0f2">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="130dp"
-                android:layout_height="match_parent">
-
-
-                <ImageButton
-                android:layout_width="130dp"
-                android:background="#eff0f2"
-                android:layout_height="30dp"
-                app:srcCompat="@drawable/home"
-                android:id="@+id/imageButton7"
-                android:scaleType="fitCenter" />
-
-                <EditText
-                    android:layout_width="130dp"
-                    android:textColor="#187bb6"
-                    android:paddingLeft="40dp"
-                    android:layout_height="38dp"
-                    android:inputType="textPersonName"
-                    android:text="Home"
-                    android:ems="10"
-                    android:id="@+id/editText1" />
-            </LinearLayout>
+    tools:context="com.example.lenovo.omecmart.home"
+    android:orientation="vertical">
 
 
 
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="90dp"
-                android:layout_height="match_parent">
-
-
-
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:background="#eff0f2"
-                    android:layout_height="30dp"
-                    app:srcCompat="@drawable/help"
-                    android:id="@+id/imageButton9"
-                    android:scaleType="fitCenter" />
-
-                <EditText
-                    android:layout_width="90dp"
-                    android:textColor="#000"
-                    android:paddingLeft="25dp"
-                    android:layout_height="38dp"
-                    android:inputType="textPersonName"
-                    android:text="Help"
-                    android:ems="10"
-                    android:id="@+id/editText2" />
-            </LinearLayout>
-
-
-
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="130dp"
-                android:layout_height="match_parent">
-
-
-
-                <ImageButton
-                    android:layout_width="130dp"
-                    android:background="#eff0f2"
-                    android:layout_height="30dp"
-                    app:srcCompat="@drawable/akun"
-                    android:id="@+id/imageButton8"
-                    android:scaleType="fitCenter" />
-
-                <EditText
-                    android:layout_width="130dp"
-                    android:textColor="#000"
-                    android:paddingLeft="40dp"
-                    android:layout_height="38dp"
-                    android:inputType="textPersonName"
-                    android:text="Home"
-                    android:ems="10"
-                    android:id="@+id/editText" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="150dp">
-
-
-            <CalendarView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/calendarView2" />
-        </LinearLayout>
-
-        <Space
-            android:layout_width="350dp"
-            android:layout_height="20dp"
-             />
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-
-
-            <ImageButton
-                android:layout_width="350dp"
                 android:background="#eff0f2"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/bengkel"
-                android:id="@+id/imageButton10"
-                android:scaleType="fitStart" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-        <Space
-            android:layout_width="350dp"
-            android:layout_height="10dp"></Space>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
+                    <LinearLayout
+                        android:layout_width="120dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
 
-            <ImageButton
-                android:background="#eff0f2"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/service"
-                android:id="@+id/imageButton13"
-                android:scaleType="fitStart">
-            </ImageButton>
+                        <ImageButton
+                            android:id="@+id/imageButton7"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#eff0f2"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/homee" />
 
 
-        </LinearLayout>
+                    </LinearLayout>
 
-        <Space
-            android:layout_width="350dp"
-            android:layout_height="10dp"></Space>
+                    <LinearLayout
+                        android:layout_width="123dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/imageButtonHelp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#eff0f2"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/helpp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="143dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/imageButtonProfil"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#eff0f2"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/akunnn" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:orientation="vertical">
 
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
+                    <ImageView
+                        android:id="@+id/imageView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/slide" />
+
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="350dp"
+                    android:layout_height="20dp" />
 
 
-            <ImageButton
-                android:background="#eff0f2"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/bengkel"
-                android:id="@+id/imageButton15"
-                android:scaleType="fitStart" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:orientation="horizontal">
 
 
-        </LinearLayout>
+                    <ImageButton
+                        android:id="@+id/buttonBookingService"
+                        android:layout_width="350dp"
+                        android:layout_height="match_parent"
+                        android:background="#eff0f2"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/booking" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="350dp"
+                    android:layout_height="10dp"></Space>
 
 
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:orientation="horizontal">
+
+
+                    <ImageButton
+                        android:id="@+id/imageButton13"
+                        android:layout_width="350dp"
+                        android:layout_height="match_parent"
+                        android:background="#eff0f2"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/service"></ImageButton>
+
+
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="350dp"
+                    android:layout_height="10dp"></Space>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:orientation="horizontal">
+
+
+                    <ImageButton
+                        android:id="@+id/imageButton15"
+                        android:layout_width="350dp"
+                        android:layout_height="match_parent"
+                        android:background="#eff0f2"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/bengkel" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
 </LinearLayout>
+</ScrollView>
 
