--- a/app/src/main/res/layout/activity_list_bengkel.xml
+++ b/app/src/main/res/layout/activity_list_bengkel.xml
@@ -12,182 +12,13 @@
     android:orientation="vertical"
     tools:context="com.example.lenovo.omecmart.ListBengkel">
 
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lvhape"
         android:layout_width="match_parent"
-        android:background="#fefefe"
-        android:layout_height="197dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:weightSum="1">
-
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="199dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="BENGKEL MOTORKU"
-                android:layout_marginBottom="10sp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView6" />
-
-            <TextView
-                android:text="jalan Basuki Rahmat no 35"
-                android:layout_width="match_parent"
-                android:textColor="#000000"
-                android:textSize="15sp"
-                android:layout_marginBottom="10sp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView5" />
-            <RatingBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ratingBar" />
-            <TextView
-                android:text="Rating"
-                android:textColor="#000"
-                android:textSize="15sp"
-                android:layout_marginBottom="10sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView3" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                >
-
-                <ImageButton
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/stat_notify_chat"
-                    android:id="@+id/imageButton4" />
-
-                <TextView
-                    android:text="20"
-                    android:textSize="20sp"
-                    android:textColor="#000"
-                    android:layout_width="56dp"
-                    android:gravity="center"
-                    android:layout_height="40dp"
-                    android:id="@+id/textView7" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#fefefe"
-            app:srcCompat="@drawable/help"
-            android:id="@+id/imageButton2"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="15dp"></LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:background="#fefefe"
-        android:layout_height="197dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:weightSum="1">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="199dp"
-            android:layout_height="197dp">
-
-
-            <TextView
-                android:text="BENGKEL MENTARI"
-                android:layout_marginBottom="10sp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView8" />
-
-            <TextView
-                android:text="jalan Basuki Rahmat no 12"
-                android:layout_width="match_parent"
-                android:textColor="#000000"
-                android:textSize="15sp"
-                android:layout_marginBottom="10sp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView9" />
-
-
-            <RatingBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ratingBar2" />
-            <TextView
-                android:text="Rating"
-                android:textColor="#000"
-                android:textSize="15sp"
-                android:layout_marginBottom="10sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView10" />
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-
-                <ImageButton
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/stat_notify_chat"
-                    android:id="@+id/imageButton6" />
-                <TextView
-                    android:text="12"
-                    android:textSize="20sp"
-                    android:textColor="#000"
-                    android:layout_width="56dp"
-                    android:gravity="center"
-                    android:layout_height="40dp"></TextView>
-
-            </LinearLayout>
-        </LinearLayout>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/help"
-            android:id="@+id/imageButton5"
-            android:backgroundTint="#fefefe"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="330dp"
         android:layout_height="match_parent"
-        android:weightSum="1">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#fefefe"
-            app:srcCompat="@drawable/peta"
-            android:layout_marginLeft="250dp"
-            android:id="@+id/imageButton"
-            android:scaleType="fitXY" />
-    </LinearLayout>
 
 </LinearLayout>
