--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,17 +5,18 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="16dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="16dp"
     tools:context="com.example.lenovo.omecmart.login"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="456dp"
+        android:layout_height="match_parent"
         android:weightSum="1">
 
         <LinearLayout
@@ -27,35 +28,47 @@
             android:layout_weight="0.13">
 
             <TextView
-                android:text="OMecMart"
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:id="@+id/textView2"
-                android:layout_weight="0.60"
+                android:layout_gravity="center"
+                android:fontFamily="arial"
+                android:text="OMecMart"
                 android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textColor="@android:color/black"
+                android:textSize="40sp" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:background="#eff0f2"
+            android:paddingTop="30dp"
             android:layout_height="263dp"
             android:weightSum="1"
-            android:layout_weight="0.83">
+            android:layout_weight="1.01">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="45dp">
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="41dp"
-                    android:layout_height="31dp"
+                    android:layout_width="22dp"
+                    android:layout_height="27dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/email" />
+                    app:srcCompat="@drawable/email"
+                    android:paddingTop="10dp"/>
+
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
                 <EditText
                     android:layout_width="wrap_content"
@@ -63,54 +76,58 @@
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/editTextUsername"
-                    android:layout_weight="1"
+                    android:layout_weight="0.72"
                     android:hint="Email (nama@email.com)"
                     android:textColorHint="#000"
                     android:textSize="14sp" />
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
+                android:layout_width="372dp"
                 android:layout_height="42dp"
-                android:layout_weight="0.02"
                 android:layout_marginTop="20sp"
                 android:weightSum="1">
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
                 <ImageView
-                    android:layout_width="41dp"
-                    android:layout_height="31dp"
+                    android:layout_width="22dp"
+                    android:layout_height="27dp"
                     app:srcCompat="@drawable/pass"
                     android:id="@+id/imageView3"
                     android:scaleType="fitCenter" />
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="373dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
+                    android:inputType="textPassword"
                     android:ems="10"
                     android:id="@+id/editTextPassword"
                     android:hint="Kata Sandi"
                     android:textColorHint="#000"
-                    android:layout_weight="1.01"
                     android:textSize="14sp" />
+                <GridLayout
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:background="#eff0f2"></GridLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
-                    <ImageButton
-                        android:layout_width="40dp"
-                        android:layout_height="39dp"
-                        app:srcCompat="@drawable/sandi"
-                        android:id="@+id/imageButton"
-                        android:scaleType="fitCenter"
-                        android:layout_marginLeft="4sp"
-                        android:backgroundTint="#eff0f2"
-                        android:elevation="0dp"
-                        android:background="#eff0f2" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -124,8 +141,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_weight="0.55"></LinearLayout>
+                    android:layout_height="29dp"></LinearLayout>
 
                 <Button
                     android:text="MASUK"
@@ -140,7 +156,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
-                    android:layout_weight="0.25"></LinearLayout>
+                    android:layout_weight="0.01"></LinearLayout>
 
                 <TextView
                     android:text="Lupa Kata Sandi?"
@@ -164,30 +180,26 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
-                android:layout_weight="0.08"
+                android:layout_weight="0.01"
                 android:background="#fff"
                 android:lineSpacingExtra="8sp"
                 android:text="Belum Punya Akun?"
                 android:textAlignment="center"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:paddingLeft="90dp"/>
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.09"
+                android:layout_weight="0.03"
                 android:background="#FFFFFF"
-                android:text="     Daftar"
+                android:text="Daftar"
                 android:textAlignment="center"
                 android:textColor="#187bb6"
-                android:textStyle="normal|bold" />
+                android:textStyle="normal|bold"
+                android:paddingRight="80dp"/>
         </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:background="#000000"></LinearLayout>
 
     </LinearLayout>
 
