--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingLeft="64dp"
+    android:paddingRight="64dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    tools:context="com.example.lenovo.omecmart.MainActivity"
+    android:orientation="vertical">
 
     <TextView
-    android:text="OMecMart"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/teksMenu" />
-
-    <Button
+        android:text="Layanan Chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pop Up Menu"
+        android:id="@+id/teksMenu"
+        android:textColor="#000"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:fontFamily="arial"
+        android:textSize="25dp"/>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Chat"
         android:layout_below="@+id/teksMenu"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="74dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/btnPopUp"/>
+        android:id="@+id/btnPopUp"
+        android:background="#187bb6"
+        android:layout_gravity="center"
+        android:textSize="20dp"/>
 
-</RelativeLayout>
+</LinearLayout>
