--- a/app/src/main/res/layout/activity_service_rutin.xml
+++ b/app/src/main/res/layout/activity_service_rutin.xml
@@ -21,16 +21,15 @@
 
 
         <TextView
-            android:layout_marginLeft="10dp"
-            android:text="Emergency"
+            android:text="Darurat"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="28dp"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
             android:id="@+id/textView13"
-             />
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_marginLeft="80sp"
@@ -44,7 +43,7 @@
                 android:layout_marginTop="20sp"
                 android:textColor="#fefefe"
                 android:background="#187bb6"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="34dp"
                 android:id="@+id/button2" />
 
@@ -80,7 +79,6 @@
             android:orientation="vertical"
             android:layout_width="131dp"
             android:layout_height="96dp"
-            android:paddingLeft="20dp"
             android:weightSum="1">
 
 
@@ -89,7 +87,7 @@
                 android:layout_marginTop="20sp"
                 android:textColor="#fefefe"
                 android:background="#187bb6"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="34dp"
                 android:id="@+id/button7" />
 
